Further reading of event data

--- a/load_event_data.ipynb
+++ b/load_event_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -42,56 +42,144 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'attendance': '0\\n',\n",
-      " 'date': '1927/10/02\\n',\n",
-      " 'daynight': 'day\\n',\n",
-      " 'fieldcond': 'unknown\\n',\n",
-      " 'gwrbi': '\\n',\n",
-      " 'hometeam': 'DET\\n',\n",
-      " 'howscored': 'unknown\\n',\n",
-      " 'inputprogvers': '\"version 7RS(19) of 07/07/92\"\\n',\n",
-      " 'inputter': '\"Greg Beston\"\\n',\n",
-      " 'inputtime': '2001/10/28 9:12PM\\n',\n",
-      " 'lp': 'buckg101\\n',\n",
-      " 'number': '2\\n',\n",
-      " 'pitches': 'none\\n',\n",
-      " 'precip': 'unknown\\n',\n",
-      " 'save': '\\n',\n",
-      " 'scorer': '\"39\"\\n',\n",
-      " 'site': 'DET04\\n',\n",
-      " 'sky': 'unknown\\n',\n",
-      " 'starttime': '0:00PM\\n',\n",
-      " 'temp': '0\\n',\n",
-      " 'timeofgame': '100\\n',\n",
-      " 'translator': '\"Greg Beston\"\\n',\n",
-      " 'ump1b': 'geish901\\n',\n",
-      " 'ump2b': '(none)\\n',\n",
-      " 'ump3b': '(none)\\n',\n",
-      " 'umphome': 'rowlp801\\n',\n",
-      " 'usedh': 'false\\n',\n",
-      " 'visteam': 'CLE\\n',\n",
-      " 'winddir': 'unknown\\n',\n",
-      " 'windspeed': '-1\\n',\n",
-      " 'wp': 'carro101\\n'}\n"
+      "DET192704290\n",
+      "  had 18 batters.\n",
+      "DET192704300\n",
+      "  had 18 batters.\n",
+      "DET192705010\n",
+      "  had 18 batters.\n",
+      "DET192705020\n",
+      "  had 18 batters.\n",
+      "DET192705030\n",
+      "  had 18 batters.\n",
+      "DET192705040\n",
+      "  had 18 batters.\n",
+      "DET192705050\n",
+      "  had 18 batters.\n",
+      "DET192705100\n",
+      "  had 18 batters.\n",
+      "DET192705110\n",
+      "  had 18 batters.\n",
+      "DET192705120\n",
+      "  had 18 batters.\n",
+      "DET192705130\n",
+      "  had 18 batters.\n",
+      "DET192705160\n",
+      "  had 18 batters.\n",
+      "DET192705170\n",
+      "  had 18 batters.\n",
+      "DET192705260\n",
+      "  had 18 batters.\n",
+      "DET192705270\n",
+      "  had 18 batters.\n",
+      "DET192705280\n",
+      "  had 18 batters.\n",
+      "DET192705301\n",
+      "  had 18 batters.\n",
+      "DET192705302\n",
+      "  had 18 batters.\n",
+      "DET192705310\n",
+      "  had 18 batters.\n",
+      "DET192706010\n",
+      "  had 18 batters.\n",
+      "DET192706270\n",
+      "  had 18 batters.\n",
+      "DET192706281\n",
+      "  had 18 batters.\n",
+      "DET192706282\n",
+      "  had 18 batters.\n",
+      "DET192706290\n",
+      "  had 18 batters.\n",
+      "DET192707081\n",
+      "  had 18 batters.\n",
+      "DET192707082\n",
+      "  had 18 batters.\n",
+      "DET192707091\n",
+      "  had 18 batters.\n",
+      "DET192707092\n",
+      "  had 18 batters.\n",
+      "DET192707100\n",
+      "  had 18 batters.\n",
+      "DET192707110\n",
+      "  had 18 batters.\n",
+      "DET192707160\n",
+      "  had 18 batters.\n",
+      "DET192707170\n",
+      "  had 18 batters.\n",
+      "DET192707180\n",
+      "  had 18 batters.\n",
+      "DET192707190\n",
+      "  had 18 batters.\n",
+      "DET192707240\n",
+      "  had 18 batters.\n",
+      "DET192708100\n",
+      "  had 18 batters.\n",
+      "DET192708110\n",
+      "  had 18 batters.\n",
+      "DET192708120\n",
+      "  had 18 batters.\n",
+      "DET192708130\n",
+      "  had 18 batters.\n",
+      "DET192708240\n",
+      "  had 18 batters.\n",
+      "DET192708250\n",
+      "  had 18 batters.\n",
+      "DET192708260\n",
+      "  had 18 batters.\n",
+      "DET192709052\n",
+      "  had 18 batters.\n",
+      "DET192709060\n",
+      "  had 18 batters.\n",
+      "DET192710021\n",
+      "  had 18 batters.\n",
+      "DET192710022\n",
+      "  had 18 batters.\n"
      ]
     }
    ],
    "source": [
     "filename = '1927DET.EVA'\n",
-    "gamelogs = {}\n",
+    "gamelogs = []\n",
     "gamecount = -1\n",
+    "\n",
     "for line in open(filename).readlines():\n",
     "    linearray = line.split(',')\n",
+    "#    print(linearray)\n",
     "    if (linearray[0] == 'id'):\n",
+    "        # 'id' starts the next game, so immediately advance gamecount  \n",
     "        gamecount = gamecount + 1\n",
-    "        infos = {}\n",
-    "        thisgameid = linearray[1]\n",
+    "        \n",
+    "        # record prior game data by adding it to the gamelogs list, unless gamecount = -1\n",
+    "        if (gamecount > 0):\n",
+    "            thisgamedict['info'] = info_dict\n",
+    "            gamelogs.append(thisgamedict)\n",
+    "        thisgamedict = {}\n",
+    "        info_dict = {}\n",
+    "        start_dict = {}\n",
+    "        vis_start_list = []\n",
+    "        home_start_list = []\n",
+    "        play_dict = {}\n",
+    "        data_dict = {}\n",
+    "        \n",
+    "        thisgamedict['id'] = linearray[1] \n",
+    "        if (gamecount > 0):\n",
+    "            print(thisgamedict['id'],' had {:.0f} batters.'.format(batterscount))\n",
+    "        batterscount = 0\n",
     "    if (linearray[0] == 'version'):\n",
-    "        thisgameversion = linearray[1]\n",
+    "        thisgamedict['version'] = linearray[1]\n",
     "    if (linearray[0] == 'info'):\n",
-    "        infos[linearray[1]] = linearray[2]\n",
-    "    \n",
-    "pprint(infos)"
+    "        info_dict[linearray[1]] = linearray[2]\n",
+    "    if (linearray[0] == 'start'):\n",
+    "        batterscount = batterscount + 1\n",
+    "        \n",
+    "#        for i in range(1,len(linearray)):\n",
+    "#            batterscount = batterscount + 1\n",
+    "#            print(i,': ',linearray[i])\n",
+    "#pprint(gamelogs)\n",
+    "\n",
+    "#pprint(infodict)\n",
+    "#pprint(infos)    \n",
+    "#pprint(infos)"
    ]
   },
   {
