--- a/load_event_data.ipynb
+++ b/load_event_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -12,38 +12,80 @@
     "import numpy as np\n",
     "import pandas\n",
     "import os\n",
+    "import io\n",
     "from pprint import pprint\n",
     "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
-    "#os.chdir('retrosheet/')\n",
+    "os.chdir('retrosheet/')\n",
     "os.getcwd()\n",
     "\n",
-    "#decades = np.linspace(1920,2010,10)\n",
-    "#zipfiles = []\n",
-    "#for x in decades:\n",
-    "#    zipfiles.append('{:.0f}'.format(x)+'seve.zip')\n",
-    "#for filename in zipfiles:\n",
-    "#    zip_ref = zipfile.ZipFile(filename, 'r')\n",
-    "#    zip_ref.extractall('.')\n",
-    "#    zip_ref.close()"
+    "decades = np.linspace(1920,2010,10)\n",
+    "zipfiles = []\n",
+    "for x in decades:\n",
+    "    zipfiles.append('{:.0f}'.format(x)+'seve.zip')\n",
+    "for filename in zipfiles:\n",
+    "    zip_ref = zipfile.ZipFile(filename, 'r')\n",
+    "    zip_ref.extractall('.')\n",
+    "    zip_ref.close()\n",
+    "print('Done')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/idies/workspace/persistent/sportsball'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "os.chdir('sportsball/')\n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "#os.getcwd()\n",
     "os.chdir('retrosheet/')\n",
@@ -78,11 +120,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "files identified\n"
+     ]
+    }
+   ],
    "source": [
     "allfiles = []\n",
     "\n",
@@ -95,24 +145,7 @@
     "        if (os.path.isfile(afile)):\n",
     "            allfiles.append(afile)\n",
     "#print(allfiles)\n",
-    "print('files identified')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import io\n",
-    "allfiles= ['retrosheet/1962BOS.EVA']\n",
-    "for filename in allfiles:\n",
-    "    print(filename)\n",
-    "#    with io.open(filename,'r',encoding='utf8') as f:\n",
-    "#        x = f.read()\n",
-    "#        print(x)"
+    "print('files identified')\n"
    ]
   },
   {
@@ -125,12 +158,11 @@
    "source": [
     "allgames = []\n",
     "gamecount = 0\n",
+    "#allfiles=['retrosheet/raw/1962BOS.EVA']\n",
     "for filename in allfiles:\n",
-    "    print(filename)\n",
-    "    for line in open(filename).readlines():\n",
+    "    for line in io.open(filename,encoding='utf-8').readlines():\n",
     "        linearray = line.split(',')\n",
     "        linearray[-1] = linearray[-1][0:-1]  # cut off newline character\n",
-    "        print(linearray)\n",
     "        if (linearray[0] == 'id'):\n",
     "            # 'id' starts the next game, so immediately advance gamecount  \n",
     "\n",
@@ -248,18 +280,28 @@
     "#    pprint(allgames[i])\n",
     "#    print('\\n')\n",
     "print('ahoy')\n",
-    "#print(allgames[0])"
+    "#pprint(allgames)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'SDN196909230'\n",
+      "51100\n"
+     ]
+    }
+   ],
    "source": [
-    "pprint(allgames[-1]['id'])"
+    "pprint(allgames[-1]['id'])\n",
+    "print(len(allgames))"
    ]
   },
   {
