Successfully loaded all event data!

--- a/load_event_data.ipynb
+++ b/load_event_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -19,73 +19,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "os.chdir('retrosheet/')\n",
-    "os.getcwd()\n",
+    "#os.chdir('retrosheet/')\n",
+    "#os.getcwd()\n",
     "\n",
-    "decades = np.linspace(1920,2010,10)\n",
-    "zipfiles = []\n",
-    "for x in decades:\n",
-    "    zipfiles.append('{:.0f}'.format(x)+'seve.zip')\n",
-    "for filename in zipfiles:\n",
-    "    zip_ref = zipfile.ZipFile(filename, 'r')\n",
-    "    zip_ref.extractall('.')\n",
-    "    zip_ref.close()\n",
-    "print('Done')"
+    "#decades = np.linspace(1920,2010,10)\n",
+    "#zipfiles = []\n",
+    "#for x in decades:\n",
+    "#    zipfiles.append('{:.0f}'.format(x)+'seve.zip')\n",
+    "#for filename in zipfiles:\n",
+    "#    zip_ref = zipfile.ZipFile(filename, 'r')\n",
+    "#    zip_ref.extractall('.')\n",
+    "#    zip_ref.close()\n",
+    "\n",
+    "#os.chdir('../')\n",
+    "#print('Done')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/idies/workspace/persistent/sportsball'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "os.chdir('sportsball/')\n",
-    "os.getcwd()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#os.getcwd()\n",
     "os.chdir('retrosheet/')\n",
@@ -120,19 +82,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "files identified\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "allfiles = []\n",
     "\n",
@@ -158,26 +112,20 @@
    "source": [
     "allgames = []\n",
     "gamecount = 0\n",
-    "#allfiles=['retrosheet/raw/1962BOS.EVA']\n",
+    "#allfiles=['retrosheet/1995MON.EVN']\n",
     "for filename in allfiles:\n",
+    "    print(filename)\n",
     "    for line in io.open(filename,encoding='utf-8').readlines():\n",
     "        linearray = line.split(',')\n",
+    "#        print(linearray)\n",
     "        linearray[-1] = linearray[-1][0:-1]  # cut off newline character\n",
     "        if (linearray[0] == 'id'):\n",
     "            # 'id' starts the next game, so immediately advance gamecount  \n",
-    "\n",
     "            # record prior game data by adding it to the gamelogs list, unless gamecount = -1\n",
     "            if (gamecount > 0):\n",
     "                thisgamedict['info'] = info_dict\n",
     "                thisgamedict['visiting_starters'] = vis_start_list.tolist()\n",
     "                thisgamedict['home_starters'] = home_start_list.tolist()\n",
-    "\n",
-    "                # record game subs only if there were any subs\n",
-    "#                if (len(vis_sub_list) > 0):\n",
-    "#                    thisgamedict['visiting_subs'] = vis_sub_list.tolist()\n",
-    "#                if (len(home_sub_list) > 0):\n",
-    "#                    thisgamedict['home_subs'] = home_sub_list.tolist()\n",
-    "\n",
     "                thisgamedict['events'] = events.tolist()\n",
     "                thisgamedict['data'] = data_list.tolist()\n",
     "                # append the dictionary describing this game to the list of games\n",
@@ -188,13 +136,12 @@
     "            thisgamedict = {}\n",
     "            info_dict = {}\n",
     "            start_dict = {}\n",
-    "            vis_start_list = np.empty((9,4),dtype=object)\n",
-    "            home_start_list = np.empty((9,4),dtype=object)\n",
+    "            vis_start_list = np.empty((0,4),dtype=object)\n",
+    "            home_start_list = np.empty((0,4),dtype=object)\n",
     "            vis_sub_list = np.empty((0,4),dtype=object)\n",
     "            home_sub_list = np.empty((0,4),dtype=object)\n",
     "            events = np.empty((0,11),dtype=object)\n",
     "            data_list = np.empty((0,2),dtype=object)\n",
-    "            batterscount = 0\n",
     "            eventnum = 0\n",
     "\n",
     "            # the first thing to go into the new game is the game id.\n",
@@ -206,17 +153,19 @@
     "        elif (linearray[0] == 'info'):\n",
     "            info_dict[linearray[1]] = linearray[2]\n",
     "        elif (linearray[0] == 'start'):\n",
-    "            batterscount = batterscount + 1\n",
+    "            thisbatter = np.empty((1,4),dtype=object)\n",
     "            if (linearray[3] == '0'):\n",
-    "                vis_start_list[batterscount-1,0] = linearray[1]\n",
-    "                vis_start_list[batterscount-1,1] = linearray[2]\n",
-    "                vis_start_list[batterscount-1,2] = linearray[4]\n",
-    "                vis_start_list[batterscount-1,3] = linearray[5]\n",
+    "                thisbatter[0,0] = linearray[1]\n",
+    "                thisbatter[0,1] = linearray[2]\n",
+    "                thisbatter[0,2] = linearray[4]\n",
+    "                thisbatter[0,3] = linearray[5]\n",
+    "                vis_start_list = np.vstack((vis_start_list, thisbatter))\n",
     "            elif (linearray[3] == '1'):\n",
-    "                home_start_list[batterscount-10,0] = linearray[1]\n",
-    "                home_start_list[batterscount-10,1] = linearray[2]\n",
-    "                home_start_list[batterscount-10,2] = linearray[4]\n",
-    "                home_start_list[batterscount-10,3] = linearray[5]        \n",
+    "                thisbatter[0,0] = linearray[1]\n",
+    "                thisbatter[0,1] = linearray[2]\n",
+    "                thisbatter[0,2] = linearray[4]\n",
+    "                thisbatter[0,3] = linearray[5]\n",
+    "                home_start_list = np.vstack((home_start_list, thisbatter))\n",
     "            else:\n",
     "                print('NEITHER VISITOR NOR HOME????')\n",
     "                \n",
@@ -260,6 +209,8 @@
     "            elif (linearray[0] == 'padj'):\n",
     "                thisevent.append('')    # inning, fill in later\n",
     "                thisevent.append('')  # visitor/home, fill in later\n",
+    "                for i in range(4,8):\n",
+    "                    thisevent.append('')  # count/pitches/result/comment all blank                \n",
     "                thisevent.append(linearray[1])  # playerID of adjusting pitcher\n",
     "                thisevent.append('')  # add blank                                \n",
     "                thisevent.append(linearray[2]) # pitcher hand adjusted to\n",
@@ -285,20 +236,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'SDN196909230'\n",
-      "51100\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pprint(allgames[-1]['id'])\n",
     "print(len(allgames))"
@@ -312,65 +254,10 @@
    },
    "outputs": [],
    "source": [
-    "with open('0events.json', 'w') as f:\n",
+    "with open('events.json', 'w') as f:\n",
     "    json.dump(allgames, f)\n",
     "print('ok')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "with open('0events.json','r') as f:\n",
-    "    allgames = json.load(f)\n",
-    "allgames"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "allgames[0]['events']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "nEvents = 0\n",
-    "for game in allgames:\n",
-    "    nEvents = nEvents + len(game['events'])\n",
-    "print('{0:,.0f} events found'.format(nEvents))\n",
-    "events_array = np.empty((nEvents,3),dtype=object)\n",
-    "for game in allgames:\n",
-    "    for j in range(0,len(game['events'])):\n",
-    "        print(game['events'])\n",
-    "#        events_array[eventno,0] = game['events'][j][0]\n",
-    "#        events[eventno,1] = game['info']['visteam']\n",
-    "#        events[eventno,2] = game['info']['hometeam']\n",
-    "events_array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
