Updated game data generator script
Also updated gitignore so it won't check in the huge output file

--- a/load_game_data.ipynb
+++ b/load_game_data.ipynb
@@ -8,14 +8,16 @@
    },
    "outputs": [],
    "source": [
-    "import zipfile\n",
+    "#import zipfile\n",
     "import numpy as np\n",
-    "import pandas"
+    "import pandas\n",
+    "import os\n",
+    "pandas.options.display.max_colwidth = -1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +49,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>date</th>\n",
-       "      <td>19200414</td>\n",
+       "      <td>18710504</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>gameno</th>\n",
@@ -55,15 +57,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>dayofweek</th>\n",
-       "      <td>Wed</td>\n",
+       "      <td>Thu</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>visitor</th>\n",
-       "      <td>DET</td>\n",
+       "      <td>CL1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>visitor_league</th>\n",
-       "      <td>AL</td>\n",
+       "      <td>na</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>visitor_gameno</th>\n",
@@ -71,11 +73,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>home</th>\n",
-       "      <td>CHA</td>\n",
+       "      <td>FW1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>home_league</th>\n",
-       "      <td>AL</td>\n",
+       "      <td>na</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>home_gameno</th>\n",
@@ -83,15 +85,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>visitor_score</th>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>home_score</th>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>nOuts</th>\n",
-       "      <td>64</td>\n",
+       "      <td>54</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>day_night</th>\n",
@@ -111,27 +113,27 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>parkID</th>\n",
-       "      <td>CHI10</td>\n",
+       "      <td>FOR01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>attendance</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>length</th>\n",
-       "      <td>145</td>\n",
+       "      <td>120</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>visitor_linescore</th>\n",
-       "      <td>00000010100</td>\n",
+       "      <td>000000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>home_linescore</th>\n",
-       "      <td>00000200001</td>\n",
+       "      <td>010010000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>visitor_ab</th>\n",
-       "      <td>36</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>visitor_h</th>\n",
@@ -147,11 +149,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>visitor_hr</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>visitor_rbi</th>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>visitor_sac</th>\n",
@@ -171,115 +173,115 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>visitor_batter9_pos</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>home_batter1_id</th>\n",
-       "      <td>leibn101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>home_batter1_name</th>\n",
-       "      <td>Nemo Leibold</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>home_batter1_pos</th>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>home_batter2_id</th>\n",
-       "      <td>weavb101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>home_batter2_name</th>\n",
-       "      <td>Buck Weaver</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>home_batter2_pos</th>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>home_batter3_id</th>\n",
-       "      <td>colle101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>home_batter3_name</th>\n",
-       "      <td>Eddie Collins</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>home_batter3_pos</th>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>home_batter4_id</th>\n",
-       "      <td>jackj101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>home_batter4_name</th>\n",
-       "      <td>Shoeless Joe Jackson</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>home_batter4_pos</th>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>home_batter5_id</th>\n",
-       "      <td>felsh101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>home_batter5_name</th>\n",
-       "      <td>Happy Felsch</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>home_batter5_pos</th>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>home_batter6_id</th>\n",
-       "      <td>jourt101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>home_batter6_name</th>\n",
-       "      <td>Ted Jourdan</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>home_batter6_pos</th>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>home_batter7_id</th>\n",
-       "      <td>risbs101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>home_batter7_name</th>\n",
-       "      <td>Swede Risberg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>home_batter7_pos</th>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>home_batter8_id</th>\n",
-       "      <td>schar103</td>\n",
+       "      <th>home_batter1_id</th>\n",
+       "      <td>selmf101</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>home_batter8_name</th>\n",
-       "      <td>Ray Schalk</td>\n",
+       "      <th>home_batter1_name</th>\n",
+       "      <td>Frank Sellman</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>home_batter8_pos</th>\n",
+       "      <th>home_batter1_pos</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>home_batter2_id</th>\n",
+       "      <td>mathb101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>home_batter2_name</th>\n",
+       "      <td>Bobby Mathews</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>home_batter2_pos</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>home_batter3_id</th>\n",
+       "      <td>foraj101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>home_batter3_name</th>\n",
+       "      <td>Jim Foran</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>home_batter3_pos</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>home_batter4_id</th>\n",
+       "      <td>goldw101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>home_batter4_name</th>\n",
+       "      <td>Wally Goldsmith</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>home_batter4_pos</th>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>home_batter5_id</th>\n",
+       "      <td>lennb101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>home_batter5_name</th>\n",
+       "      <td>Bill Lennon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>home_batter5_pos</th>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>home_batter6_id</th>\n",
+       "      <td>caret101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>home_batter6_name</th>\n",
+       "      <td>Tom Carey</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>home_batter6_pos</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>home_batter7_id</th>\n",
+       "      <td>mince101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>home_batter7_name</th>\n",
+       "      <td>Ed Mincher</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>home_batter7_pos</th>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>home_batter8_id</th>\n",
+       "      <td>mcdej101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>home_batter8_name</th>\n",
+       "      <td>James McDermott</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>home_batter8_pos</th>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>home_batter9_id</th>\n",
-       "      <td>willl104</td>\n",
+       "      <td>kellb105</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>home_batter9_name</th>\n",
-       "      <td>Lefty Williams</td>\n",
+       "      <td>Bill Kelly</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>home_batter9_pos</th>\n",
-       "      <td>1</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>misc</th>\n",
@@ -295,94 +297,96 @@
        "</div>"
       ],
       "text/plain": [
-       "gameID                                  0\n",
-       "date                             19200414\n",
-       "gameno                                  0\n",
-       "dayofweek                             Wed\n",
-       "visitor                               DET\n",
-       "visitor_league                         AL\n",
-       "visitor_gameno                          1\n",
-       "home                                  CHA\n",
-       "home_league                            AL\n",
-       "home_gameno                             1\n",
-       "visitor_score                           2\n",
-       "home_score                              3\n",
-       "nOuts                                  64\n",
-       "day_night                               D\n",
-       "completed                             NaN\n",
-       "forfeit                               NaN\n",
-       "protest                               NaN\n",
-       "parkID                              CHI10\n",
-       "attendance                            NaN\n",
-       "length                                145\n",
-       "visitor_linescore             00000010100\n",
-       "home_linescore                00000200001\n",
-       "visitor_ab                             36\n",
-       "visitor_h                               4\n",
-       "visitor_2b                              1\n",
-       "visitor_3b                              0\n",
-       "visitor_hr                              1\n",
-       "visitor_rbi                             2\n",
-       "visitor_sac                             0\n",
-       "visitor_sacfly                          0\n",
-       "visitor_hbp                             0\n",
-       "...                                   ...\n",
-       "visitor_batter9_pos                     1\n",
-       "home_batter1_id                  leibn101\n",
-       "home_batter1_name            Nemo Leibold\n",
-       "home_batter1_pos                        9\n",
-       "home_batter2_id                  weavb101\n",
-       "home_batter2_name             Buck Weaver\n",
-       "home_batter2_pos                        5\n",
-       "home_batter3_id                  colle101\n",
-       "home_batter3_name           Eddie Collins\n",
-       "home_batter3_pos                        4\n",
-       "home_batter4_id                  jackj101\n",
-       "home_batter4_name    Shoeless Joe Jackson\n",
-       "home_batter4_pos                        7\n",
-       "home_batter5_id                  felsh101\n",
-       "home_batter5_name            Happy Felsch\n",
-       "home_batter5_pos                        8\n",
-       "home_batter6_id                  jourt101\n",
-       "home_batter6_name             Ted Jourdan\n",
-       "home_batter6_pos                        3\n",
-       "home_batter7_id                  risbs101\n",
-       "home_batter7_name           Swede Risberg\n",
-       "home_batter7_pos                        6\n",
-       "home_batter8_id                  schar103\n",
-       "home_batter8_name              Ray Schalk\n",
-       "home_batter8_pos                        2\n",
-       "home_batter9_id                  willl104\n",
-       "home_batter9_name          Lefty Williams\n",
-       "home_batter9_pos                        1\n",
-       "misc                                  NaN\n",
-       "acquisition                             Y\n",
+       "gameID                             0\n",
+       "date                 18710504       \n",
+       "gameno               0              \n",
+       "dayofweek            Thu            \n",
+       "visitor              CL1            \n",
+       "visitor_league       na             \n",
+       "visitor_gameno       1              \n",
+       "home                 FW1            \n",
+       "home_league          na             \n",
+       "home_gameno          1              \n",
+       "visitor_score        0              \n",
+       "home_score           2              \n",
+       "nOuts                54             \n",
+       "day_night            D              \n",
+       "completed            NaN            \n",
+       "forfeit              NaN            \n",
+       "protest              NaN            \n",
+       "parkID               FOR01          \n",
+       "attendance           200            \n",
+       "length               120            \n",
+       "visitor_linescore    000000000      \n",
+       "home_linescore       010010000      \n",
+       "visitor_ab           30             \n",
+       "visitor_h            4              \n",
+       "visitor_2b           1              \n",
+       "visitor_3b           0              \n",
+       "visitor_hr           0              \n",
+       "visitor_rbi          0              \n",
+       "visitor_sac          0              \n",
+       "visitor_sacfly       0              \n",
+       "visitor_hbp          0              \n",
+       "...                 ..              \n",
+       "visitor_batter9_pos  6              \n",
+       "home_batter1_id      selmf101       \n",
+       "home_batter1_name    Frank Sellman  \n",
+       "home_batter1_pos     5              \n",
+       "home_batter2_id      mathb101       \n",
+       "home_batter2_name    Bobby Mathews  \n",
+       "home_batter2_pos     1              \n",
+       "home_batter3_id      foraj101       \n",
+       "home_batter3_name    Jim Foran      \n",
+       "home_batter3_pos     3              \n",
+       "home_batter4_id      goldw101       \n",
+       "home_batter4_name    Wally Goldsmith\n",
+       "home_batter4_pos     6              \n",
+       "home_batter5_id      lennb101       \n",
+       "home_batter5_name    Bill Lennon    \n",
+       "home_batter5_pos     2              \n",
+       "home_batter6_id      caret101       \n",
+       "home_batter6_name    Tom Carey      \n",
+       "home_batter6_pos     4              \n",
+       "home_batter7_id      mince101       \n",
+       "home_batter7_name    Ed Mincher     \n",
+       "home_batter7_pos     7              \n",
+       "home_batter8_id      mcdej101       \n",
+       "home_batter8_name    James McDermott\n",
+       "home_batter8_pos     8              \n",
+       "home_batter9_id      kellb105       \n",
+       "home_batter9_name    Bill Kelly     \n",
+       "home_batter9_pos     9              \n",
+       "misc                 NaN            \n",
+       "acquisition          Y              \n",
        "\n",
        "[161 rows x 1 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#zip_ref = zipfile.ZipFile('gl1920_39.zip', 'r')\n",
-    "#zip_ref.extractall('.')\n",
-    "#zip_ref.close()\n",
-    "\n",
-    "years = np.arange(1920,1940)\n",
+    "os.chdir('retrosheet_games/')\n",
+    "years = range(1871,2016+1)\n",
     "filenames = []\n",
     "for thisyear in years:\n",
     "    filenames.append('GL'+str(thisyear)+'.TXT')\n",
-    "filenames\n",
     "\n",
+    "#filenames\n",
     "gamedata = pandas.DataFrame()\n",
-    "templist = []\n",
+    "\n",
+    "list_of_file_contents = []\n",
     "for thisname in filenames:\n",
+    "#    print('Reading filename: ',thisname)\n",
     "    df = pandas.read_csv(thisname,header=None)\n",
-    "    templist.append(df)\n",
-    "gamedata = pandas.concat(templist)\n",
+    "    list_of_file_contents.append(df)\n",
+    "gamedata = pandas.concat(list_of_file_contents)\n",
+    "\n",
+    "os.chdir('../')\n",
+    "#gamedata.tail(30)\n",
     "\n",
     "# Columns given at http://www.retrosheet.org/gamelogs/glfields.txt\n",
     "colnames = ['date','gameno','dayofweek']\n",
@@ -436,6 +440,26 @@
     "gamedata = gamedata.drop('index',axis=1)\n",
     "gamedata.index.name = 'gameID'\n",
     "gamedata.head(1).transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n"
+     ]
+    }
+   ],
+   "source": [
+    "gamedata.to_csv('gamedata.csv')\n",
+    "print('done')"
    ]
   },
   {
