Updated to use user-entered beginning and end years

--- a/process_events.ipynb
+++ b/process_events.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -96,22 +96,48 @@
      "output_type": "stream",
      "text": [
       "Processing events for the year 1921...\n",
-      "Processing events for the year 1922...\n"
+      "Processing events for the year 1922...\n",
+      "Processing events for the year 1923...\n",
+      "Processing events for the year 1924...\n",
+      "Processing events for the year 1925...\n",
+      "Processing events for the year 1926...\n",
+      "Processing events for the year 1927...\n",
+      "Processing events for the year 1928...\n",
+      "Processing events for the year 1929...\n",
+      "Processing events for the year 1930...\n",
+      "Processing events for the year 1931...\n",
+      "Processing events for the year 1932...\n",
+      "Processing events for the year 1933...\n",
+      "Processing events for the year 1934...\n",
+      "Processing events for the year 1935...\n",
+      "Processing events for the year 1936...\n",
+      "Processing events for the year 1937...\n",
+      "Processing events for the year 1938...\n",
+      "Processing events for the year 1939...\n",
+      "Processing events for the year 1940...\n",
+      "saved\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(1415, 12)"
+       "(14563, 12)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "theseyears = range(1921,1923)\n",
+    "# for 1921-1940, runs in < 12 min\n",
+    "# for 1921-1950, runs in < 12 min\n",
+    "\n",
+    "\n",
+    "firstyear = 1941\n",
+    "lastyear = 1950\n",
+    "\n",
+    "theseyears = range(firstyear,lastyear+1)\n",
     "#dfx = df[pandas.to_datetime(df.index.str.slice(3,7)).year == theseyears[0]]\n",
     "#for k in range(0,len(theseyears)):\n",
     "#    thisyear_df = pandas.concat((dfx,df[pandas.to_datetime(df.index.str.slice(3,7)).year == theseyears[k]]))\n",
@@ -142,18 +168,16 @@
     "            thisrow.append(index)\n",
     "        events_df.loc[i] = thisrow\n",
     "        i = i + 1\n",
+    "\n",
+    "filename = 'events' + str(firstyear) + '-' + str(lastyear) + '.csv'\n",
     "events_df.index.name = 'eventID'\n",
+    "\n",
+    "events_df.to_csv(filename)\n",
+    "print('saved to'+filename)        \n",
+    "\n",
+    "\n",
     "events_df.shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
